# Other-Python-Projects

./: .gitignore  Anti-Lychrel.py  README.md  compare_three_scores.py  packet_sniffer.py  schooley_mitchell.py  sockMerchant.py  sum_of_array.py  three_digit_largest_palindrome.py
Advanced_E_Commerce/: db.sqlite3
DAC_MITRE/: requirements.txt
Django_React_Docker/: docker-compose.yml
Every_AWS_Tutorials/: README.md
FastAPI/: CRUD.py  README.md  intro.py  main.py
FastAPI_POC/: client.py  main.py
FastAPI_Phishing/: Dockerfile  app.py  deployment.yml  requirements.txt
FastAPI_Summarizer/: README.md  docker-compose.yml  pyproject.toml
FastAPI_Summarizer/app/: main.py
FastAPI_Summarizer/app/core/: config.py  deps.py
FastAPI_Summarizer/app/models/: schemas.py
FastAPI_Summarizer/app/routes/: health.py  summarize.py
FastAPI_Summarizer/app/services/: llama.py  llm.py  openai.py  providers.py
FastAPI_Summarizer/app/services/data_normalizer/: README.md  __init__.py  data_normalizer.py
FastAPI_Summarizer/tests/: test_health.py
LinkedInFetchJob/: main.py
MultiAgent/: README.md  app.ipynb  requirements.txt  utils.py
NetworkSecurityAutomation/: README.md  drift_detector.py
Order_Mgt/: README.md
Pulumi/: README.md
PyAdvance/: README.md  first_class_func.py  oop.py
PySpark/: app.py
Read_PDF/: .gitignore  extract_images.py  (+5 more)
SecurityAutomation/Python/dns_automation/: config.py  logging_setup.py  models.py  pyproject.toml
SecurityAutomation/Python/dns_automation/dns_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+176 files in other folders)
