[project]
name = "siem-summarizer"
version = "0.0.1"
description = "FastAPI skeleton for private LLaMA3 SIEM log summarization"
requires-python = ">=3.11"
dependencies = [
"fastapi>=0.112.0",
"uvicorn[standard]>=0.30.0",
"httpx>=0.27.0",
"pydantic>=2.7.0",
"pytest>=8.3.0",
"pytest-asyncio>=0.23.7",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"