[project]
name = "dns_automation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "dnspython>=2.6",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
dns-auto= "dns_automation.cli:app"